--- a/eTickets/Views/Producers/Index.cshtml
+++ b/eTickets/Views/Producers/Index.cshtml
@@ -1,8 +1,9 @@
-﻿@model IEnumerable<Actor>
- 
+﻿@model IEnumerable<Producer>
+
 @{
-   ViewData["Title"] = "List of Actors";
+    ViewData["Title"] = "List of Producers";
 }
+
 <div class="row">
     <div class="col-md-8 offset-md-2">
         <table class="table">
@@ -15,25 +16,22 @@
                 </tr>
             </thread>
             <tbody>
-                @foreach (var x in Model)
+                @foreach (var item in Model)
                 {
-                    <tr>
+                    <tr class="text-center">
                         <td class="align-middle">
-                        <img class="rounded-circle" src="@x.ProfilePictureURL" alt="@x.FullName" style="max-width: 150px"/>
+                        <img class="rounded-circle"src="@item.ProfilePictureURL" alt="@item.FullName" style="max-width: 150px"/>
                         </td>
-                        <td class="align-middle">@x.FullName</td>
-                        <td class="align-middle">@x.Bio</td>
+                        <td class="align-middle">@item.FullName</td>
+                        <td class="align-middle">@item.Bio</td>
                         <td class="align-middle">
-                            <a class="btn btn-outline-primary"><i class="bi bi-pencil-square"></i>Edit</a> |
-                            <a class="btn btn-outline-info"><i class="bi bi-eye"></i>Details</a> |
-                            <a class="btn btn-danger text-white"><i class="bi bi-trash"></i>Delete</a>
-
+                            <a class="btn btn-outline-primary"><i class="bi bi-pencil-square"></i>Edit</a>
+                            <a class="btn btn-outline-info"><i class="bi bi-eye"></i>Details</a>
+                            <a class="btn btn-danger text-white"><i class="bi bi-trash"></i>Details</a>
                         </td>
                     </tr>
-
                 }
             </tbody>
         </table>
-
     </div>
 </div>
