--- a/eTickets/Views/Shared/_Layout.cshtml
+++ b/eTickets/Views/Shared/_Layout.cshtml
@@ -19,12 +19,12 @@
                 </button>
                 <div class="navbar-collapse collapse d-sm-inline-flex justify-content-between">
                     <ul class="navbar-nav flex-grow-1">
-                        <li class="navbar-item"> 
+                        <li class="nav-item"> 
                             <a class="nav-link text-dark" asp-controller="Movies" asp-action="Index"><i class="bi bi-film"></i>Movies</a>
                         </li>
 
-                        <li class="nav-item dropdown-">
-                            <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-togle="button" aria-haspopup="true" aria-expanded="false">
+                        <li class="nav-item dropdown">
+                            <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
                                 <i class="bi bi-gear"></i> Management
                             </a>
 
