--- a/eTickets/Views/Movies/Index.cshtml
+++ b/eTickets/Views/Movies/Index.cshtml
@@ -20,7 +20,7 @@
                         </div>
                     </div>
                     <div class="col-md-6">
-                        <img src="----" width="100%" alt="@item.Name">
+                        <img src="@item.ImageURL" width="100%" alt="@item.Name">
                     </div>
                     <div class="col-md-6">
                         <div class="card-body">
